Assets/RocketPunch/Bad/Samples/Sample01/AssetGroups/ModelGroup.asset
%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!114 &11400000
MonoBehaviour:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_GameObject: {fileID: 0}
  m_Enabled: 1
  m_EditorHideFlags: 0
  m_Script: {fileID: 11500000, guid: afe38423bb1d4552a0c1bdd2175c6f49, type: 3}
  m_Name: ModelGroup
  m_EditorClassIdentifier: 
  assets:
  - {fileID: 6127317802712950453, guid: 875637b7ba955e647b152955172e2cdd, type: 3}
  - {fileID: 3160403056874134900, guid: c3bb143a16eb0ac44a6e46587ff846af, type: 3}
